# deskflow-BLE

./: README.md
.github/: README.md
cmake/: Libraries.cmake  vcpkg.json.in
src/apps/: CMakeLists.txt
src/apps/ble-bench/: CMakeLists.txt  main.cpp
src/apps/deskflow-core/: CoreArgParser.cpp  CoreArgs.h
src/apps/deskflow-gui/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/arch/unix/: ArchMultithreadPosix.cpp
src/lib/ble/: BleAddressParser.h  BleFraming.cpp  BleFraming.h  BleListenSocket.cpp  BleListenSocket.h  BlePairingBroker.cpp  BlePairingBroker.h  BlePairingCode.cpp  BlePairingCode.h  BleProtocolClassifier.cpp  BleProtocolClassifier.h  BleSecureListenSocket.cpp  BleSecureListenSocket.h  BleSecureSocket.cpp  BleSecureSocket.h  BleSocket.cpp  BleSocket.h  BleSocketFactory.cpp  BleSocketFactory.h  BleTransport.h  CMakeLists.txt  IBleCentralBackend.h  IBlePeripheralBackend.h
src/lib/ble/linux/: BluezAdapter.cpp  BluezAdapter.h  BluezAdvertisement.cpp  BluezAdvertisement.h  BluezBleCentralBackend.cpp  BluezBleCentralBackend.h  BluezBlePeripheralBackend.cpp  BluezBlePeripheralBackend.h  BluezDbusTypes.cpp  BluezDbusTypes.h  BluezGattApplication.cpp  BluezGattApplication.h
src/lib/ble/qt/: QtBlePeripheralBackend.cpp  QtBlePeripheralBackend.h
src/lib/ble/win/: WinRtBleCentralBackend.cpp  WinRtBleCentralBackend.h  WinRtBlePeripheralBackend.cpp  WinRtBlePeripheralBackend.h
src/lib/client/: Client.cpp  ServerProxy.cpp
src/lib/common/: Settings.cpp  Settings.h  VersionInfo.h.in
src/lib/deskflow/: CMakeLists.txt  ClientApp.cpp  PacketStreamFilter.cpp  ServerApp.cpp
src/lib/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/lib/gui/core/: CoreProcess.cpp
src/lib/gui/dialogs/: BlePairingDialog.cpp  BlePairingDialog.h
src/lib/gui/widgets/: LogDock.cpp  LogDock.h  LogWidget.cpp  LogWidget.h
src/lib/server/: ClientProxy1_0.cpp  ClientProxyUnknown.cpp
src/unittests/: CMakeLists.txt
src/unittests/ble/: BleAddressParserTests.cpp  BleAddressParserTests.h  BleFramingTests.cpp  BleFramingTests.h  BlePairingCodeTests.cpp  BlePairingCodeTests.h  BleProtocolClassifierTests.cpp  BleProtocolClassifierTests.h  BleSecureSocketTests.cpp  BleSecureSocketTests.h  BluezHelpersTests.cpp  BluezHelpersTests.h  CMakeLists.txt
translations/: deskflow_es.ts  deskflow_it.ts  deskflow_ja.ts  deskflow_ko.ts  deskflow_ru.ts  deskflow_zh_CN.ts
